[package]
name = "transactional-message-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
log = { version = "0.4", features = ["kv", "kv_unstable", "kv_sval", "kv_serde", "max_level_trace", "release_max_level_info"] }
