[package]
name = "transactional-message-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
log = { version = "0.4" }
formatted_logger = { version = "0.1.1" }
